--- a/templates/login.html
+++ b/templates/login.html
@@ -62,6 +62,15 @@
 </head>
 <body>
     <div class="login-container">
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <ul>
+      {% for category, message in messages %}
+        <li style="color: green; font-weight: bold;">{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
         <h1 style="font-size: 32px; font-weught: bold; text-shaddow: 2px 2px 8px rgba(0,0,0,0.5); color: white;">
         Welcome to the LA Olympics 2028 <br> Transport Guide
         </h1>
@@ -70,6 +79,19 @@
             <input type="password" name="password" placeholder="Password" required><br>
             <input type="submit" value="Login">
         </form>
+         <div style="text-align: center; margin-top: 20px;">
+          <p style="background-color: rgba(255, 255, 255, 0.7); padding: 10px 20px; border-radius: 10px; font-size: 16px; font-weight: bold; color: black; display: inline-block;">
+          Don't have an account?
+           <a href="/signup" style="color: #004aad; font-weight: bold; text-decoration: underline;">Sign up here</a>
+  </p>
+</div>
+
+  </a>
+</p>
+
+  </a>
+</p>
+
     </div>
 </body>
 </html>
